--- a/23.9.18/javascript/index.html
+++ b/23.9.18/javascript/index.html
@@ -12,6 +12,7 @@
             console.log('hello world');
     </script> -->
     <!-- <script src="js/java.js"></script> -->
-    <script src="js/types.js"></script>
+    <!-- <script src="js/types.js"></script> -->
+    <script src="js/operator.js"></script>
 </body>
 </html>
