--- a/23.9.18/javascript/index.html
+++ b/23.9.18/javascript/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 id="title">제목입니다</h1>
+    <div id="bar">
+        <div id="graph" data-value="80"></div>
+    </div>
     <!-- 자바 스크립트는 태그 가장 밑부분에 추가 -->
     <!-- <script>
             console.log('hello world');
@@ -13,6 +18,7 @@
     </script> -->
     <!-- <script src="js/java.js"></script> -->
     <!-- <script src="js/types.js"></script> -->
-    <script src="js/operator.js"></script>
+    <!-- <script src="js/operator.js"></script> -->
+    <script src="js/app.js"></script>
 </body>
 </html>
