--- a/23.9.19/비교문장/index.html
+++ b/23.9.19/비교문장/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="script.js"></script> -->
-    <script src="switch.js"></script>
+    <!-- <script src="switch.js"></script> -->
+    <script src="function.js"></script>
 </body>
 </html>
