--- a/23.9.19/비교문장/index.html
+++ b/23.9.19/비교문장/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="script.js"></script> -->
     <!-- <script src="switch.js"></script> -->
-    <script src="function.js"></script>
+    <!-- <script src="function.js"></script> -->
+    <script src="array.js"></script>
 </body>
 </html>
