반복문과 클릭이벤트

--- a/23.9.21/logo/index.html
+++ b/23.9.21/logo/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ex.css">
 </head>
 <body>
     <main>
         <header class="site__header">
-            <h1 class="brand">lo<span class="brand--point">go</span></h1>
+            <h1 class="brand">LO<span class="brand--point">GO</span></h1>
             <nav>
                 <ul class="menu">
                     <li><a class="menu-item active" href="#">브랜드소개</a></li>
@@ -21,5 +21,6 @@
             </nav>
         </header>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
