--- a/23.9.21/토글/index.html
+++ b/23.9.21/토글/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="toggle active">
+        <div class="switch"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
