--- a/23.10.11/for.html
+++ b/23.10.11/for.html
@@ -15,14 +15,19 @@
     document.write("<br/>");
 
     let sum = 0;
+    let str = "";
     for (let j = 1; j <= 5; j++) {
       sum = sum + j;
-      let k = 1;
-      console.log(sum);
-      document.write(sum + "=" + sum + j + "=" + sum);
+      // 각각 의 i 값의 합을 1부터 5까지 '문자열'로 표현
+      if (j == 1) {
+        str += j;
+      } else {
+        str += "+" + j;
+      }
+      console.log(j);
+      document.write(str + "=" + sum);
+
       document.write("<br>");
     }
-    // (1 + 0) + (1 + 1) + (1 + 2) + (1 + 3) + (1 + 4);
   </script>
 </html>
-sum+=j = sum = sum +j
