--- a/23.10.17/functionEx.html
+++ b/23.10.17/functionEx.html
@@ -38,7 +38,7 @@
 
       let template = `<p>${arr.toString()}</p>`;
       //   res.insertAdjacentHTML('위치','HTML요소의 문자열');
-      // 위치 : beforebegin, afterend, afterbegin, beforeend
+      // 위치 : beforebegin, beforeend, afterend, afterbegin
       res.insertAdjacentHTML("beforeend", template);
     }
   </script>
