--- a/hompage/main.html
+++ b/hompage/main.html
@@ -1,49 +1,85 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1>Web Shopping</h1>
-      </div>
-      <div class="menu">
-        <ul class="menu-list">
-          <li>H O M E</li>
-          <li>S H O P P I N G &nbsp;&nbsp; A B O U T</li>
-          <li>N E W S</li>
-          <li>M Y &nbsp;&nbsp; A C C O U N T</li>
-          <li>C O N T A C T S</li>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="header">
+      <h1>Web Shopping</h1>
+    </div>
+    <div class="menu">
+      <ul class="menu-list">
+        <li>H O M E</li>
+        <li>S H O P P I N G &nbsp;&nbsp; A B O U T</li>
+        <li>N E W S</li>
+        <li>M Y &nbsp;&nbsp; A C C O U N T</li>
+        <li>C O N T A C T S</li>
+      </ul>
+    </div>
+    <div class="body">
+      <div class="kate">
+        <h1>카테고리</h1>
+        <ul>
+          <li>컴퓨터</li>
+          <li>의류</li>
+          <li>음악</li>
+          <li>영화</li>
+          <li>스포츠/레저</li>
+          <li>가구/인테리어</li>
+          <li>식품</li>
         </ul>
       </div>
-      <div class="body">
-        <div class="kate">
-          카테고리
-          <ul>
-            <li>컴퓨터</li>
-            <li>의류</li>
-            <li>음악</li>
-            <li>영화</li>
-            <li>스포츠/레저</li>
-            <li>가구/인테리어</li>
-            <li>식품</li>
-          </ul>
+      <div class="card">
+        <img src="" alt="이미지" />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
+          tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
+          quas autem dolorum sint veniam. Ut facere mollitia placeat explicabo
+          necessitatibus distinctio?
+        </p>
+      </div>
+      <div class="card">
+        <img src="" alt="이미지" />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
+          tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
+          quas autem dolorum sint veniam. Ut facere mollitia placeat explicabo
+          necessitatibus distinctio?
+        </p>
+      </div>
+      <div class="card">
+        <img src="" alt="이미지" />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
+          tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
+          quas autem dolorum sint veniam. Ut facere mollitia placeat explicabo
+          necessitatibus distinctio?
+        </p>
+      </div>
+      <div class="cart">
+        <div>
+          <h1>Shopping Cart</h1>
         </div>
-        <div class="card">
-          <img src="" alt="이미지" />
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
-            tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
-            quas autem dolorum sint veniam. Ut facere mollitia placeat explicabo
-            necessitatibus distinctio?
-          </p>
-        </div>
+        <p>현재 쇼핑카트에 물품이 없습니다.</p>
+        <a href="#">쇼핑카트 보기</a>
+        <h1>Log In</h1>
+        <p>아이디</p>
+        <input type="text">
+        <p>패스워드</p>
+        <input type="password">
+        <button>로그인</button>
+        <button>초기화</button>
+        <a href="">회원가입</a>
+        <a href="">비밀번호 분실</a>
       </div>
       <div class="footer"></div>
     </div>
-  </body>
+</body>
+
 </html>
