--- a/hompage/main.html
+++ b/hompage/main.html
@@ -36,7 +36,9 @@
         </ul>
       </div>
       <div class="card">
-        <img src="" alt="이미지" />
+        <figure>
+        <img src="img/desktap.jpg" alt="이미지" />
+        </figure>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
           tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
@@ -45,7 +47,7 @@
         </p>
       </div>
       <div class="card">
-        <img src="" alt="이미지" />
+        <img src="img/notebook.jpg" alt="이미지" />
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
           tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
@@ -54,7 +56,7 @@
         </p>
       </div>
       <div class="card">
-        <img src="" alt="이미지" />
+        <img src="img/monitor.jpg" alt="이미지" />
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
           tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
@@ -78,7 +80,9 @@
         <a href="">회원가입</a>
         <a href="">비밀번호 분실</a>
       </div>
-      <div class="footer"></div>
+    </div>
+    <div class="footer">
+      <h2>2023.10.22 DW아케데미 042-123-4567</h2>
     </div>
 </body>
 
