회원가입창

--- a/hompage/main.html
+++ b/hompage/main.html
@@ -10,9 +10,12 @@
 
 <body>
   <div class="container">
+    <div class="header-container">
     <div class="header">
       <h1>Web Shopping</h1>
     </div>
+  </div>
+  <div class="menu-container">
     <div class="menu">
       <ul class="menu-list">
         <li>H O M E</li>
@@ -21,6 +24,7 @@
         <li>M Y &nbsp;&nbsp; A C C O U N T</li>
         <li>C O N T A C T S</li>
       </ul>
+    </div>
     </div>
     <div class="body">
       <div class="kate">
@@ -35,6 +39,7 @@
           <li>식품</li>
         </ul>
       </div>
+    
       <div class="card">
         <figure>
         <img src="img/desktap.jpg" alt="이미지" />
@@ -45,44 +50,61 @@
           quas autem dolorum sint veniam. Ut facere mollitia placeat explicabo
           necessitatibus distinctio?
         </p>
+        <button class="sp">쇼핑 카트에 추가하기</button>
       </div>
       <div class="card">
+        <figure>
         <img src="img/notebook.jpg" alt="이미지" />
+        </figure>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
           tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
           quas autem dolorum sint veniam. Ut facere mollitia placeat explicabo
           necessitatibus distinctio?
         </p>
+        <button class="sp">쇼핑 카트에 추가하기</button>
       </div>
       <div class="card">
+        <figure>
         <img src="img/monitor.jpg" alt="이미지" />
+        </figure>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, at
           tenetur obcaecati ipsam commodi, asperiores, repellendus hic nam
           quas autem dolorum sint veniam. Ut facere mollitia placeat explicabo
           necessitatibus distinctio?
         </p>
+        <button class="sp">쇼핑 카트에 추가하기</button>
       </div>
+      
       <div class="cart">
         <div>
           <h1>Shopping Cart</h1>
         </div>
+        <div>
         <p>현재 쇼핑카트에 물품이 없습니다.</p>
         <a href="#">쇼핑카트 보기</a>
+        </div>
         <h1>Log In</h1>
+        <div>
         <p>아이디</p>
         <input type="text">
         <p>패스워드</p>
-        <input type="password">
+        <input type="password" class="password">
+        </div>
+        <div>
         <button>로그인</button>
         <button>초기화</button>
+        <br>
         <a href="">회원가입</a>
         <a href="">비밀번호 분실</a>
+        </div>
       </div>
     </div>
+    <div class="footer-container">
     <div class="footer">
       <h2>2023.10.22 DW아케데미 042-123-4567</h2>
+    </div>
     </div>
 </body>
 
