--- a/23.10.24/up-down.html
+++ b/23.10.24/up-down.html
@@ -16,16 +16,25 @@
     let randNum = 0;
     let count = 0;
     const MAX_COUNT = 5;
+    let upDown = "";
+    const pTag = document.querySelector("#message");
+    const input = document.querySelector("#number");
+    let resStr = "";
     function getRandom() {
       randNum = parseInt(Math.random() * 100 + 1);
     }
     function reset() {
       count = 0;
       getRandom();
+      pTag.innerHTML = "";
+      input.value = "";
+      resStr = "";
     }
     function test() {
-      const input = document.querySelector("#number");
-      count++;
+      console.log(count);
+
+      const spanTag = document.createElement("span");
+      // count++;
       if (randNum == input.value) {
         alert(`게임에서 승리하셨습니다. 컴퓨터의 숫자 : ${randNum}`);
         reset();
@@ -34,8 +43,27 @@
         if (count == MAX_COUNT) {
           alert(`게임에서 패배 하셨습니다. 컴퓨터의 숫자 : ${randNum}`);
           reset();
+        } else {
+          if (randNum > input.value) {
+            upDown = "작습니다";
+          } else {
+            upDown = "큽니다";
+          }
+          // spanTag.innerHTML = `${
+          //   input.value
+          // }은(는) 컵퓨터의 숫자 보다 ${upDown} 남은 횟수 : ${
+          //   MAX_COUNT - count
+          // }<br>`;
+          // pTag.appendChild(spanTag);
+          resStr += `${
+            input.value
+          }은(는) 컵퓨터의 숫자 보다 ${upDown} 남은 횟수 : ${
+            MAX_COUNT - count
+          }<br>`;
+          pTag.innerHTML = resStr;
         }
       }
     }
+    getRandom();
   </script>
 </html>
