--- a/23.10.25/string.html
+++ b/23.10.25/string.html
@@ -112,10 +112,10 @@
     // 숫자만을 검색하거나. 띄어쓰기, 특수문자 등을 검색하려면 검색패턴으로 특정한 특수문자를 사용해야 한다.
 
     // \ : 역슬래쉬 다음에 일반 문자가 나오면 이스케이프 문자로 해석하고, 특수문자가 나오면 일반 문자로 해석
-    // \d : 숫자를 검색. \d == /[0~9]/
-    // \D : 숫자가 아닌 문자를 검색 ==/[^0~9]/
-    // \w : 언더바(_)를 포함한 영문자 및 숫자를 검색 == /[A~Za~z0~9]/
-    // \W : 언더바(_), 영문자, 숫자가 아닌 문자를 검색 == /[^A~Za~z0~9]/
+    // \d : 숫자를 검색. \d == /[0-9]/
+    // \D : 숫자가 아닌 문자를 검색 ==/[^0-9]/
+    // \w : 언더바(_)를 포함한 영문자 및 숫자를 검색 == /[A-Za-z0-9]/
+    // \W : 언더바(_), 영문자, 숫자가 아닌 문자를 검색 == /[^A-Za-z0-9]/
     // \s : 띄어쓰기, 텝, 줄바꿈 문자등의 공백 문자를 검색
     // \S : 띄어쓰기, 텝, 줄바꿈 문자등의 공백 문자가 아닌 문자를 검색
     // \b : 단어의 맨 앞이나 맨 뒤가 패턴과 일치하는지 검색
