--- a/23.10.25/string.html
+++ b/23.10.25/string.html
@@ -122,5 +122,83 @@
 
     // 전화번호 검색패턴의 예 : 000-0000-0000 => /[0-9]{3}-[0-9]{4}-[0-9]{4}/
     // 이메일 검색패턴의 예 : OOOOOO@OOOOOO.OOO =>/[0-9a-zA-Z]+@[a-z]+\.[a-z\.]{3,}/
+
+    let reg = /[0-9a-zA-Z]+@[a-z]+\.[a-z\.]{3,}/;
+    const email = "gksgh123@gmail.com";
+    console.log(reg.test(email));
+
+    document.write("<hr>");
+    document.write(`<h1>search()함수</h1>`);
+
+    // 8. search()함수
+    // String에서 인수로 전달받은 정규 표현식 또는 문자(열)을 이용하여 String의 검색 작업을 수행
+
+    document.write(`<h3>is 검색 : ${str5.search("is")}</h3>`);
+    document.write(`<h3>s 검색 : ${str5.search("s")}</h3>`);
+    document.write(`<h3>s 검색 : ${str5.search(/s/g)}</h3>`);
+    document.write("<hr>");
+    document.write(`<h1>match()함수</h1>`);
+
+    // 9. match()함수
+    // 정규식 혹은 문자(열)으로 검색하여 일치하는 결과를 배열로 리턴한다. 발견되지 않으면 null을 리턴한다
+
+    document.write(`<h3>match로 Java 확인 : ${str5.match("Java")}</h3>`);
+    console.log(str5.match("Java"));
+
+    document.write("<hr>");
+    document.write(`<h1>substring()함수 중요</h1>`);
+    // 10. substring()함수
+    // String 에서 전달 받은 시작 인덱스부터 종료 인덱스 바로 앞까지의 문자열을 추출한 새로운 문자열을 반환한다
+    // abcDEFabc
+    document.write(
+      `<h3>substring(2, 6)으로 Java 확인 : ${str2.substring(2, 6)}</h3>`
+    );
+    document.write(
+      `<h3>substring(2)으로 Java 확인 : ${str2.substring(2)}</h3>`
+    );
+    document.write(
+      `<h3>substring(2, str2.length)으로 Java 확인 : ${str2.substring(
+        2,
+        str2.length
+      )}</h3>`
+    );
+    document.write(
+      `<h3>substring(-4, 2)으로 Java 확인 : ${str2.substring(-4, 2)}</h3>`
+    );
+    // substring 은 음수가 전달되면 0 으로 변경해서 함수를 실행한다
+    document.write(
+      `<h3>substring(4, 2)으로 Java 확인 : ${str2.slice(4, 2)}</h3>`
+    );
+    // substring 은 시작값이 종료값보다 크면 서로 교환해서 함수를 실행한다
+    document.write("<hr>");
+    document.write(`<h1>substr()함수 중요</h1>`);
+    // 11. substr()함수
+    // String 에서 전달 받은 시작 인덱스 부터 길이만큼의 문자열을 추출한 새로운 문자열을 반환한다
+
+    document.write(
+      `<h3>substr(2, 6)으로 Java 확인 : ${str2.substr(2, 6)}</h3>`
+    );
+    document.write(`<h3>substr(2)으로 Java 확인 : ${str2.substr(2)}</h3>`);
+
+    document.write("<hr>");
+    document.write(`<h1>slice()함수 중요</h1>`);
+
+    // 12.slice()함수
+    // String 에서 전달 받은 시작 인덱스 부터 종료 인덱스 바로 앞 까지의 문자열을 추출한 새 문자열을 반환한다
+    // abcDEFabc
+    document.write(`<h3>slice(2, 6)으로 Java 확인 : ${str2.slice(2, 6)}</h3>`);
+    document.write(`<h3>slice(4, 2)으로 Java 확인 : ${str2.slice(4, 2)}</h3>`);
+    document.write(
+      `<h3>slice(-4, -2)으로 Java 확인 : ${str2.slice(-4, -2)}</h3>`
+    );
+    document.write(`<h3>slice(2)으로 Java 확인 : ${str2.slice(2)}</h3>`);
+
+    document.write("<hr>");
+    document.write(`<h1>split()함수 제일 중요</h1>`);
+    // 13.split()함수
+    // String을 구분자를 기준으로 나눈 후, 나뉜 문자열을 배열로 반환한다
+    const str6 = "사과/바나나,파인애플/딸기/포도";
+    document.write(`<h3>split 사용: ${str6.split("/")}</h3>`);
+    console.log(str6.split("/"));
   </script>
 </html>
