--- a/특강/portfolio/index.html
+++ b/특강/portfolio/index.html
@@ -15,9 +15,20 @@
     <meta name="og:url" property="http://hanho.pe.kr" />
     <meta name="og:url" property="http://hanho.pe.kr/image/og.jpg" />
     <link rel="stylesheet" href="prttfolio/css/common.css" />
+    <link rel="stylesheet" href="prttfolio/css/slider.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
     <script
       src="https://kit.fontawesome.com/1edf72a888.js"
       crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
   </head>
   <body>
@@ -88,7 +99,77 @@
         </div>
       </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main id="snows">
+      <span id="snow"></span>
+      <div class="container">
+        <div id="slider">
+          <div class="item">
+            <img src="prttfolio/images/slide1.jpg" alt="슬라이더 이미지" />
+            <div class="item-text">
+              <h3>끝임없이 성장하는 개발자</h3>
+              <p>저는 끊임 없이 공부하고 새로운 것을 받아들이려 노력합니다</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="prttfolio/images/slide2.jpg" alt="슬라이더 이미지" />
+            <div class="item-text">
+              <h3>Lorem ipsum,</h3>
+              <p>lorem</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="prttfolio/images/slide3.jpg" alt="슬라이더 이미지" />
+            <div class="item-text">
+              <h3>강아지파</h3>
+              <p>멍멍 강아지</p>
+            </div>
+          </div>
+        </div>
+        <script>
+          $("#slider").slick({
+            autoplay: true,
+            autoplaySpeed: 3000,
+            slideToShow: 1,
+            slidesToScroll: 1,
+            dots: true,
+            // arrows:false,
+            prevArrow:
+              "<button class='slick-prev'><i class='fas fa-circle-chevron-left'></i></button>",
+            nextArrow:
+              "<button class='slick-next'><i class='fas fa-circle-chevron-right'></i></button>",
+          });
+        </script>
+      </div>
+      <div id="cards">
+        <div class="container">
+          <div class="card">
+            <i class="fab fa-searchengin"></i>
+            <h3>탐구하는 개발자</h3>
+            <p>항상 탐구하는 자세로 문제를 해결하겠습니다</p>
+          </div>
+          <div class="card">
+            <i class="fas fa-bolt"></i>
+            <h3>변화하는 개발자</h3>
+            <p>새로운 기술을 빠르게 흡수하고 적용하겠습니다</p>
+          </div>
+          <div class="card">
+            <i class="fas fa-seedling"></i>
+            <h3>발전하는 개발자</h3>
+            <p>문제를 해결 한층 더 완성도를 높이겠습니다</p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        copyright 2023 Hanho Ryu All rights reserved.
+        <br />
+        <i class="fas fa-envelope"></i> :
+        <a href="mailto:gksgh123@naver.com">gksgh123@naver.com</a>
+        <br />
+        <i class="fas fa-mobile"></i> :
+        <a href="tel:01095052714">010-9505-2714</a>
+      </div>
+    </footer>
   </body>
 </html>
