--- a/특강/portfolio/index.html
+++ b/특강/portfolio/index.html
@@ -100,7 +100,7 @@
       </div>
     </header>
     <main id="snows">
-      <span id="snow"></span>
+      <span class="snow"></span>
       <div class="container">
         <div id="slider">
           <div class="item">
