--- a/23.11.10/MBTIcolor/MBTIcolor.html
+++ b/23.11.10/MBTIcolor/MBTIcolor.html
@@ -10,8 +10,8 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
-    <link rel="stylesheet" href="../../resources/css/home.css" />
     <link rel="stylesheet" href="../../resources/css/style.css" />
+    <link rel="stylesheet" href="../../resources/css/home.css" />
   </head>
   <body>
     <div class="container">
@@ -29,7 +29,7 @@
       </div>
       <div class="content">
         <!-- 새 컬러 등록하기 -->
-        <a class="add-item" href="#">+ 새 컬러 등록하기</a>
+        <a class="add-item" href="newColor.html">+ 새 컬러 등록하기</a>
         <!-- MBTI별 컬러 -->
         <ul class="items">
           <li class="item">
