--- a/shareSkill/shareSkill.html
+++ b/shareSkill/shareSkill.html
@@ -157,20 +157,296 @@
     </div>
     <!-- 캐러셀 끝 -->
     <div class="container">
+      <!-- 튜터 모집 alert 시작  -->
       <div class="row">
         <div class="col-12">
           <div
             class="alert alert-warning alert-dismissible fade show"
             role="alert"
           >
-            <strong>튜터 모집!</strong>재능을 나누어보아요.
+            <strong>튜터 모집!</strong> 재능을 나누어보아요.
             <button type="button" class="btn-close" aria-label="Close"></button>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xl-3"></div>
-      </div>
+      <!-- 튜터 모집 alert 끝  -->
+      <!-- 클래스 목록 시작 -->
+      <div class="row" id="courseList">
+        <!-- <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course1.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정1번 이미지"
+            />
+            <div class="info">
+              <h4>개성있는 일러스트 작품 만들기</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course2.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정2번 이미지"
+            />
+            <div class="info">
+              <h4>내가 만드는 나만의 악세서리</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course3.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정3번 이미지"
+            />
+            <div class="info">
+              <h4>내 이야기를 노래로!</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course4.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정4번 이미지"
+            />
+            <div class="info">
+              <h4>비전공자를 위한 웹 프로그래밍</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course5.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정5번 이미지"
+            />
+            <div class="info">
+              <h4>자신감 업! 메이크업 클래스</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course6.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정6번 이미지"
+            />
+            <div class="info">
+              <h4>아이돌 댄스 정복하기</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course7.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정7번 이미지"
+            />
+            <div class="info">
+              <h4>사진 작가에게 배우는 야외 사진</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+          <a href="#" class="course">
+            <img
+              src="../resources/img/course8.jpg"
+              width="100%"
+              class="course-img"
+              alt="과정8번 이미지"
+            />
+            <div class="info">
+              <h4>기본부터 익히는 플라워 클래스</h4>
+              <div class="lecture">
+                <img
+                  src="../resources/img/user.png"
+                  width="20"
+                  height="20"
+                  alt="강사 프로필"
+                />
+                <span class="name">김진용</span>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div> -->
+      <!-- 클래스 목록 끝 -->
     </div>
   </body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAOp5onwE0nJ8oSTlI59bwFWGoDXooTyj8",
+      authDomain: "test-8791d.firebaseapp.com",
+      projectId: "test-8791d",
+      storageBucket: "test-8791d.appspot.com",
+      messagingSenderId: "193392046761",
+      appId: "1:193392046761:web:bd57889b8ee3cf4de7afb8",
+      measurementId: "G-L8MQPH4WW1"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
+  <script>
+    console.log()
+    
+    // const courseArr = [];
+    // const courseObj1 = {
+    //   courseImgPath: "../resources/img/course1.jpg",
+    //   courseAlt: "과정1번 이미지",
+    //   courseName: "개성있는 일러스트 작품 만들기",
+    //   tchrPflImgPath: "../resources/img/user.png",
+    //   tchrName: "김진용",
+    // };
+    // const courseObj2 = {
+    //   courseImgPath: "../resources/img/course2.jpg",
+    //   courseAlt: "과정2번 이미지",
+    //   courseName: "내가 만드는 나만의 악세서리",
+    //   tchrPflImgPath: "../resources/img/user.png",
+    //   tchrName: "김진용",
+    // };
+    // const courseObj3 = {
+    //   courseImgPath: "../resources/img/course3.jpg",
+    //   courseAlt: "과정3번 이미지",
+    //   courseName: "내 이야기를 노래로!",
+    //   tchrPflImgPath: "../resources/img/user.png",
+    //   tchrName: "김진용",
+    // };
+    // const courseObj4 = {
+    //   courseImgPath: "../resources/img/course4.jpg",
+    //   courseAlt: "과정4번 이미지",
+    //   courseName: "비전공자를 위한 웹 프로그래밍",
+    //   tchrPflImgPath: "../resources/img/user.png",
+    //   tchrName: "김진용",
+    // };
+
+    // courseArr.push(courseObj1);
+    // courseArr.push(courseObj2);
+    // courseArr.push(courseObj3);
+    // courseArr.push(courseObj4);
+
+    // console.log(courseArr);
+    // 노드, 요소
+    // 노드를 추가하는 방법
+    // append, prepend, before, after, appendChild, insertBefore
+    // 문자열로 추가할 수 있는 방법
+    // innerHTML, insertAdjacentHTML
+
+    const courseList = document.getElementById("courseList");
+    // courseArr.forEach(el => {
+    //   courseList.insertAdjacentHTML("beforeend", `
+    //   <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+    //       <a href="#" class="course">
+    //         <img
+    //           src="${el.courseImgPath}"
+    //           width="100%"
+    //           class="course-img"
+    //           alt="${el.courseAlt}"
+    //         />
+    //         <div class="info">
+    //           <h4>${el.courseName}</h4>
+    //           <div class="lecture">
+    //             <img
+    //               src="${el.tchrPflImgPath}"
+    //               width="20"
+    //               height="20"
+    //               alt="강사 프로필"
+    //             />
+    //             <span class="name">${el.tchrName}</span>
+    //           </div>
+    //         </div>
+    //       </a>
+    //     </div>
+    //   `);
+    // })
+  </script>
 </html>
