--- a/shareSkill/firebase-practice.html
+++ b/shareSkill/firebase-practice.html
@@ -21,6 +21,10 @@
   .selected{
     background-color: yellow;
   }
+  tr{
+    cursor: pointer;
+    height: 50px;
+  }
 </style>
 <body>
   <div>
@@ -58,13 +62,12 @@
     </tr>
   </table>
   <br>
-  <p>
     <button id="deletBtn">데이터 삭제</button>
-  </p>
+    <button id="updateBtn">데이터 수정</button>
 </body>
 <script type="module">
   import * as firebase from "../resources/js/fireBase.js"
-  const  {db, getDocs, collection, getDatas, setDoc, addDoc,doc,addDatas,app} = firebase;
+  const  {db, getDocs, collection, getDatas, setDoc, addDoc,doc,addDatas,app,deleteDatas,updateDoc,updateDatas} = firebase;
   // 문서 아이디 부여
   // async function addMember(dataObj){
   //   await setDoc(doc(db,"member","member1"),dataObj);
@@ -96,15 +99,48 @@
   getmembers().then(function (){
     const trs = document.querySelectorAll("tr");
       trs.forEach((el) => {
-        console.log(el);
-        el.addEventListener("click", function () {
-          el.classList.toggle("selected");
+        el.addEventListener("click", function (e) {
+          if(e.target.tagName !="TH"){
+            el.classList.toggle("selected");
+          }
         });
       });
     })
 
+  const updateBtn = document.querySelector("#updateBtn")
+  updateBtn.addEventListener("click",function(){
+    const updateObj = {
+        memberId: "ljh0609",
+        memberTel: "01012345678",
+      };
+      // const memberRef = doc(db, "member", "member1");
+      // updateDoc(memberRef, {
+      //   memberId: "ljh0609",
+      //   memberTel: "01012345678",
+      //   memberTell: deleteField(),
+      // });
+    updateDatas("member","member1",updateObj).then(()=>window.location.reload())
+
+    // updateDatas(memberRef).then(()=> window.location.reload())
+  })
+
   const btn = document.querySelector("#saveBtn")
-  const deletBtn = document.querySelector("#deletBtn")
+  const deletBtn = document.querySelector("#deletBtn");
+    deletBtn.addEventListener("click",function(){
+      const selectedTrs = memberTable.querySelectorAll("[class=selected]");
+      if (selectedTrs.length == 0){
+        alert("삭제할 데이터가 없습니다.");
+        return;
+      }
+      selectedTrs.forEach((el => {
+        const docId = el.lastElementChild.value;
+        deleteDatas("member",docId).then(function(){
+          window.location.reload()
+        })
+      }))
+    })
+
+
   btn.addEventListener("click", function(){
     const memberInfo = {
       memberAge: document.querySelector("input[name=age]").value, 
@@ -113,7 +149,9 @@
       memberName: document.querySelector("input[name=name]").value, 
       memberTel: document.querySelector("input[name=tel]").value,
     };
-    addDatas("member",memberInfo);
+    addDatas("member",memberInfo).then(function(){
+      window.location.reload();
+    });
   })
 </script>
 <script>
