--- a/23.11.24/simpleDB.html
+++ b/23.11.24/simpleDB.html
@@ -10,6 +10,7 @@
       <div class="search">
         <input type="text" class="search-input" placeholder="ID입력" />
         <button class="search-btn" onclick="{searchID()}">검색</button>
+        <p class="msg"></p>
       </div>
       <hr>
       <div class="content">
