--- a/23.9.26/swiper/index.html
+++ b/23.9.26/swiper/index.html
@@ -36,7 +36,7 @@
         <!-- If we need scrollbar -->
         <!-- <div class="swiper-scrollbar"></div> -->
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="jsdelivr"></script>
     <script>
         const swiper = new Swiper('.swiper', {
             // Optional parameters
