--- a/23.11.30/slide.html
+++ b/23.11.30/slide.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="slide.css">
 </head>
 <body>
     <div class="container">
         <ul class="gallery">
-            <li style="background-color: #f6bd60;"></li>
-            <li style="background-color: #f7ede2;"></li>
-            <li style="background-color: #f5cac3;"></li>
-            <li style="background-color: #84a59d;"></li>
-            <li style="background-color: #f28482;"></li>
-            <li style="background-color: #f6bd60;"></li>
-            <li style="background-color: #f7ede2;"></li>
-            <li style="background-color: #f5cac3;"></li>
-            <li style="background-color: #84a59d;"></li>
-            <li style="background-color: #f28482;"></li>
+            <li><img src="img/spo1.jpg" alt=""></li>
+            <li><img src="img/spo2.jpg" alt=""></li>
+            <li><img src="img/spo3.jpg" alt=""></li>
+            <li><img src="img/spo4.jpg" alt=""></li>
+            <li><img src="img/spo5.jpg" alt=""></li>
+            <li><img src="img/spo6.jpg" alt=""></li>
+            <li><img src="img/spo7.jpg" alt=""></li>
+            <li><img src="img/spo8.jpg" alt=""></li>
+            <li><img src="img/spo9.jpg" alt=""></li>
+            <li><img src="img/spo10.jpg" alt=""></li>
+            <li><img src="img/medy1.jpg" alt=""></li>
+            <li><img src="img/medy2.jpg" alt=""></li>
+            <li><img src="img/medy3.jpg" alt=""></li>
+            <li><img src="img/medy4.jpg" alt=""></li>
+            <li><img src="img/medy5.jpg" alt=""></li>
+            <li><img src="img/medy6.jpg" alt=""></li>
+            <li><img src="img/medy7.jpg" alt=""></li>
+            <li><img src="img/medy8.jpg" alt=""></li>
+            <li><img src="img/medy9.jpg" alt=""></li>
+            <li><img src="img/medy10.jpg" alt=""></li>
         </ul>
+        <div class="swiper-button-next"><iconify-icon icon="maki:arrow" class="next-arrow"></iconify-icon></div>
+        <div class="swiper-button-prev"><iconify-icon icon="maki:arrow" class="prev-arrow"></iconify-icon></div>
     </div>
-    <div class="container">
+    <!-- <div class="container">
         <ul class="gallery">
             <li style="background-color: #f6bd60;"></li>
             <li style="background-color: #f7ede2;"></li>
@@ -34,7 +46,8 @@
             <li style="background-color: #84a59d;"></li>
             <li style="background-color: #f28482;"></li>
         </ul>
-    </div>
+    </div> -->
 </body>
-<script src="script.js"></script>
+<script src="slide.js"></script>
+<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </html>
